syntax = "proto3";

package com.demo.order;

option java_package = "com.demo.order.model.protobuf.generated";
option java_multiple_files = true;
option java_outer_classname = "AddressProto";

message Address {
  string first_name = 1;
  string last_name = 2;
  string line_1 = 3;
  string line_2 = 4;
  string city = 5;
  string state = 6;
  string country = 7;
  string zipcode = 8;
}